$Id: NEWS,v 1.975 2009-02-05 18:53:54 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

1.3.2 - Released 5-Feb-2009
--------------------------------
- Bug 3169 - Multiple RewriteRules for the same RewriteCondition not processed
  properly.
- Bug 3171 - ExtendedLog should log full SITE command using %m.
- Bug 3173 - Encoding-dependent SQL injection vulnerability.

1.3.2rc4 - Released 23-Jan-2009
--------------------------------
- Bug 2045 - SQLShowInfo should not be displayed when query returns no data.
- Bug 2915 - mod_rewrite does not work well for SITE commands.
- Bug 1636 - GroupRatio does not check user's supplemental group membership.
- Bug 3137 - ProFTPD does not log filename %f for uploaded files.
- Bug 3142 - "Invalid number of arguments MFMT" due to spaces in path argument.
- Bug 3144 - mod_dynmasq returns same IP address, even though actual IP
  address has changed.
- Bug 3040 - Support for CreateHome parent directories owned by user.
- Added Russian translation.
- Bug 2020 - HideFiles sometimes fails.
- Bug 3146 - <Directory> paths using glob characters may not match as expected.
- Bug 3147 - Comma-delimited commands in <Limit> sections not handled properly.
- Bug 3149 - Bad handling of %p, %V, and %v variables in mod_sql.
- Bug 3150 - mod_facl erroneously assumes no permissions, rather than all
  permissions, in some cases.
- Bug 3159 - mod_rewrite build fails due to missing mode argument in open(2)
  call on some platforms.

1.3.2rc3 - Released 20-Nov-2008
--------------------------------
- Bug 3114 - Bad handling of uid/gid parameters for CreateHome.
- Bug 3115 - Cross-site request forgery.