@@ -22,7 +22,7 @@
  * the resulting executable, without including the source code for OpenSSL in
  * the source distribution.
  *
- * $Id: mod_sql_mysql.c,v 1.51 2009-02-05 18:53:54 castaglia Exp $
+ * $Id: mod_sql_mysql.c,v 1.52 2009-02-05 21:49:28 castaglia Exp $
  */
 
 /*
@@ -1274,6 +1274,7 @@ MODRET cmd_escapestring(cmd_rec * cmd) {
   modret_t *cmr = NULL;
   char *unescaped = NULL;
   char *escaped = NULL;
+  cmd_rec *close_cmd;
 
   sql_log(DEBUG_FUNC, "%s", "entering \tmysql cmd_escapestring");
 
@@ -1313,6 +1314,10 @@ MODRET cmd_escapestring(cmd_rec * cmd) {
 #else
   mysql_escape_string(escaped, unescaped, strlen(unescaped));
 #endif
+
+  close_cmd = _sql_make_cmd(cmd->tmp_pool, 1, entry->name);
+  cmd_close(close_cmd);
+  SQL_FREE_CMD(close_cmd);
 
   sql_log(DEBUG_FUNC, "%s", "exiting \tmysql cmd_escapestring");
   return mod_create_data(cmd, (void *) escaped);
